Adding specz on HDFN, HS82, SA13 and XMM-13hr
#21 #15 #22 #23

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/2.3_Merging.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/2.3_Merging.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -751,8 +751,61 @@
     "collapsed": true
    },
    "source": [
-    "## VI - Choosing between multiple measurements\n",
-    "If running in low memory mode this happens in a seperate notebook."
+    "## VI - Adding spec-z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "specz =  Table.read(\"../../dmu23/dmu23_Herschel-Stripe-82/data/HELP-SPECZ_Herschel-Stripe-82_20170202.fits\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['field',\n",
+       " 'specz_id',\n",
+       " 'ra',\n",
+       " 'dec',\n",
+       " 'z_spec',\n",
+       " 'z_source',\n",
+       " 'z_qual',\n",
+       " 'z_rel',\n",
+       " 'agn_flag',\n",
+       " 'notes']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nb_merge_dist_plot(\n",
+    "    SkyCoord(master_catalogue['ra'], master_catalogue['dec']),\n",
+    "    SkyCoord(specz['ra'] * u.deg, specz['dec'] * u.deg)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "master_catalogue = specz_merge(master_catalogue, specz, radius=1. * u.arcsec)"
    ]
   },
   {
