--- a/dmu1/dmu1_ml_HDF-N/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_HDF-N/2_Merging.ipynb
@@ -30,9 +30,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/seaborn/apionly.py:6: UserWarning: As seaborn no longer sets a default style on import, the seaborn.apionly module is deprecated. It will be removed in a future version.\n",
+      "  warnings.warn(msg, UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "#%config InlineBackend.figure_format = 'svg'\n",
@@ -550,24 +559,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#specz =  Table.read(\"../../dmu23/dmu23_HDF-N/data/HDF-N-specz-v2.8.fits\")"
+    "specz =  Table.read(\"../../dmu23/dmu23_HDF-N/data/HDF-N-specz-v2.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#specz['objid'].name = 'specz_id'"
+    "specz.rename_column('RA', 'ra')\n",
+    "specz.rename_column('DEC', 'dec')\n",
+    "specz.rename_column('OBJID', 'specz_id')\n",
+    "specz.rename_column('Z_SPEC', 'z_spec')\n",
+    "specz.rename_column('Z_SOURCE', 'z_source')\n",
+    "specz.rename_column('Z_QUAL', 'z_qual')\n",
+    "specz.rename_column('REL', 'rel')\n",
+    "specz.rename_column('AGN', 'agn')"
    ]
   },
   {
@@ -578,10 +592,10 @@
    },
    "outputs": [],
    "source": [
-    "#nb_merge_dist_plot(\n",
-    "#    SkyCoord(master_catalogue['ra'], master_catalogue['dec']),\n",
-    "#    SkyCoord(specz['ra'] * u.deg, specz['dec'] * u.deg)\n",
-    "#)"
+    "nb_merge_dist_plot(\n",
+    "    SkyCoord(master_catalogue['ra'], master_catalogue['dec']),\n",
+    "    SkyCoord(specz['ra'] * u.deg, specz['dec'] * u.deg)\n",
+    ")"
    ]
   },
   {
@@ -592,7 +606,7 @@
    },
    "outputs": [],
    "source": [
-    "#master_catalogue = specz_merge(master_catalogue, specz, radius=1. * u.arcsec)"
+    "master_catalogue = specz_merge(master_catalogue, specz, radius=1. * u.arcsec)"
    ]
   },
   {
