--- a/dmu1/dmu1_ml_SA13/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_SA13/2_Merging.ipynb
@@ -30,11 +30,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/seaborn/apionly.py:6: UserWarning: As seaborn no longer sets a default style on import, the seaborn.apionly module is deprecated. It will be removed in a future version.\n",
+      "  warnings.warn(msg, UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "#%config InlineBackend.figure_format = 'svg'\n",
@@ -422,20 +429,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## VI - Cross-matching with spec-z catalogue\n",
-    "\n",
-    "There is currently no specz available"
+    "## VI - Cross-matching with spec-z catalogue\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#specz =  Table.read(\"../../dmu23/dmu23_SA13/data/SA13-specz-v2.1.fits\")"
+    "specz =  Table.read(\"../../dmu23/dmu23_SA13/data/SA13-specz-v2.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "specz.rename_column('RA', 'ra')\n",
+    "specz.rename_column('DEC', 'dec')\n",
+    "specz.rename_column('OBJID', 'specz_id')\n",
+    "specz.rename_column('Z_SPEC', 'z_spec')\n",
+    "specz.rename_column('Z_SOURCE', 'z_source')\n",
+    "specz.rename_column('Z_QUAL', 'z_qual')\n",
+    "specz.rename_column('REL', 'rel')\n",
+    "specz.rename_column('AGN', 'agn')"
    ]
   },
   {
@@ -446,10 +465,10 @@
    },
    "outputs": [],
    "source": [
-    "#nb_merge_dist_plot(\n",
-    "#    SkyCoord(master_catalogue['ra'], master_catalogue['dec']),\n",
-    "#    SkyCoord(specz['ra'] * u.deg, specz['dec'] * u.deg)\n",
-    "#)"
+    "nb_merge_dist_plot(\n",
+    "    SkyCoord(master_catalogue['ra'], master_catalogue['dec']),\n",
+    "    SkyCoord(specz['ra'] * u.deg, specz['dec'] * u.deg)\n",
+    ")"
    ]
   },
   {
@@ -460,7 +479,7 @@
    },
    "outputs": [],
    "source": [
-    "#master_catalogue = specz_merge(master_catalogue, specz, radius=1. * u.arcsec)"
+    "master_catalogue = specz_merge(master_catalogue, specz, radius=1. * u.arcsec)"
    ]
   },
   {
@@ -748,7 +767,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
