Working on preliminary Cigale run across HELP

--- a/dmu32/dmu32_Bootes/Bootes_catalogue_merging.ipynb
+++ b/dmu32/dmu32_Bootes/Bootes_catalogue_merging.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CDFS-SWIRE - Merging HELP data products\n",
+    "# Bootes - Merging HELP data products\n",
     "\n",
-    "This notebook merges the various HELP data products on CDFS-SWIRE.\n",
+    "This notebook merges the various HELP data products on Bootes. We are currently waiting for redshifts and XID+ fluxes\n",
     "\n",
     "It is first used to create a catalogue that will be used for SED fitting by CIGALE by merging the optical master list, the photo-z and the XID+ far infrared fluxes.  Then, this notebook is used to incorporate the CIGALE physical parameter estimations and generate the final HELP data product on the field."
    ]
@@ -45,6 +45,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Masterlist DR1 date\n",
+    "SUFFIX = '20xxxxxx'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -62,7 +74,7 @@
     "# Master list\n",
     "\n",
     "ml = Table.read(\n",
-    "    \"../../dmu1/dmu1_ml_CDFS-SWIRE/data/master_catalogue_cdfs-swire_20180129.fits\")\n",
+    "    \"../../dmu1/dmu1_ml_Bootes/data/master_catalogue_Bootes_{}.fits\".format(SUFFIX))\n",
     "ml.meta = None"
    ]
   },
@@ -94,7 +106,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# XID+ PACS\n",
@@ -134,7 +148,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# XID+ SPIRE\n",
