--- a/dmu32/dmu32_EGS/EGS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_EGS/EGS_catalogue_merging.ipynb
@@ -4,24 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CDFS-SWIRE - Merging HELP data products\n",
+    "# EGS - Merging HELP data products\n",
     "\n",
-    "This notebook merges the various HELP data products on CDFS-SWIRE.\n",
+    "This notebook merges the various HELP data products on EGS.\n",
     "\n",
     "It is first used to create a catalogue that will be used for SED fitting by CIGALE by merging the optical master list, the photo-z and the XID+ far infrared fluxes.  Then, this notebook is used to incorporate the CIGALE physical parameter estimations and generate the final HELP data product on the field."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Set this to true to produce only the catalogue for CIGALE and to false \n",
-    "# to continue and merge the CIGALE results too.\n",
-    "FIRST_RUN_FOR_CIGALE = True"
    ]
   },
   {
@@ -45,6 +32,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Set this to true to produce only the catalogue for CIGALE and to false \n",
+    "# to continue and merge the CIGALE results too.\n",
+    "FIRST_RUN_FOR_CIGALE = True\n",
+    "\n",
+    "SUFFIX = '20171202'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -62,7 +64,7 @@
     "# Master list\n",
     "\n",
     "ml = Table.read(\n",
-    "    \"../../dmu1/dmu1_ml_CDFS-SWIRE/data/master_catalogue_cdfs-swire_20180129.fits\")\n",
+    "    \"../../dmu1/dmu1_ml_EGS/data/master_catalogue_egs_20171202.fits\")\n",
     "ml.meta = None"
    ]
   },
@@ -74,109 +76,113 @@
    },
    "outputs": [],
    "source": [
-    "# XID+ MIPS24\n",
+    "# # XID+ MIPS24\n",
     "\n",
-    "xid_mips24 = Table.read(\"../../dmu26/dmu26_XID+MIPS_CDFS-SWIRE/data/\"\n",
-    "                          \"dmu26_XID+MIPS_CDFS-SWIRE_cat_20170901.fits\")\n",
-    "xid_mips24.meta = None\n",
+    "# xid_mips24 = Table.read(\"../../dmu26/dmu26_XID+MIPS_CDFS-SWIRE/data/\"\n",
+    "#                           \"dmu26_XID+MIPS_CDFS-SWIRE_cat_20170901.fits\")\n",
+    "# xid_mips24.meta = None\n",
     "\n",
-    "# Adding the error column\n",
-    "xid_mips24.add_column(Column(\n",
-    "    data=np.max([xid_mips24['FErr_MIPS_24_u'] - xid_mips24['F_MIPS_24'],\n",
-    "                 xid_mips24['F_MIPS_24'] - xid_mips24['FErr_MIPS_24_l']],\n",
-    "                axis=0),\n",
-    "    name=\"ferr_mips_24\"\n",
-    "))\n",
-    "xid_mips24['F_MIPS_24'].name = \"f_mips_24\"\n",
-    "xid_mips24 = xid_mips24['help_id', 'f_mips_24', 'ferr_mips_24', 'flag_mips_24']"
+    "# # Adding the error column\n",
+    "# xid_mips24.add_column(Column(\n",
+    "#     data=np.max([xid_mips24['FErr_MIPS_24_u'] - xid_mips24['F_MIPS_24'],\n",
+    "#                  xid_mips24['F_MIPS_24'] - xid_mips24['FErr_MIPS_24_l']],\n",
+    "#                 axis=0),\n",
+    "#     name=\"ferr_mips_24\"\n",
+    "# ))\n",
+    "# xid_mips24['F_MIPS_24'].name = \"f_mips_24\"\n",
+    "# xid_mips24 = xid_mips24['help_id', 'f_mips_24', 'ferr_mips_24', 'flag_mips_24']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# XID+ PACS\n",
+    "# # XID+ PACS\n",
     "\n",
-    "xid_pacs = Table.read(\"../../dmu26/dmu26_XID+PACS_CDFS-SWIRE/data/\"\n",
-    "                        \"dmu26_XID+PACS_CDFS-SWIRE_cat_20171019.fits\")\n",
-    "xid_pacs.meta = None\n",
+    "# xid_pacs = Table.read(\"../../dmu26/dmu26_XID+PACS_CDFS-SWIRE/data/\"\n",
+    "#                         \"dmu26_XID+PACS_CDFS-SWIRE_cat_20171019.fits\")\n",
+    "# xid_pacs.meta = None\n",
     "\n",
-    "# Convert from mJy to μJy\n",
-    "for col in [\"F_PACS_100\", \"FErr_PACS_100_u\", \"FErr_PACS_100_l\",\n",
-    "            \"F_PACS_160\", \"FErr_PACS_160_u\", \"FErr_PACS_160_l\"]:\n",
-    "    xid_pacs[col] *= 1000\n",
+    "# # Convert from mJy to μJy\n",
+    "# for col in [\"F_PACS_100\", \"FErr_PACS_100_u\", \"FErr_PACS_100_l\",\n",
+    "#             \"F_PACS_160\", \"FErr_PACS_160_u\", \"FErr_PACS_160_l\"]:\n",
+    "#     xid_pacs[col] *= 1000\n",
     "\n",
-    "xid_pacs.add_column(Column(\n",
-    "    data=np.max([xid_pacs['FErr_PACS_100_u'] - xid_pacs['F_PACS_100'],\n",
-    "                 xid_pacs['F_PACS_100'] - xid_pacs['FErr_PACS_100_l']],\n",
-    "                axis=0),\n",
-    "    name=\"ferr_pacs_green\"\n",
-    "))\n",
-    "xid_pacs['F_PACS_100'].name = \"f_pacs_green\"\n",
-    "xid_pacs['flag_PACS_100'].name = \"flag_pacs_green\"\n",
+    "# xid_pacs.add_column(Column(\n",
+    "#     data=np.max([xid_pacs['FErr_PACS_100_u'] - xid_pacs['F_PACS_100'],\n",
+    "#                  xid_pacs['F_PACS_100'] - xid_pacs['FErr_PACS_100_l']],\n",
+    "#                 axis=0),\n",
+    "#     name=\"ferr_pacs_green\"\n",
+    "# ))\n",
+    "# xid_pacs['F_PACS_100'].name = \"f_pacs_green\"\n",
+    "# xid_pacs['flag_PACS_100'].name = \"flag_pacs_green\"\n",
     "\n",
-    "xid_pacs.add_column(Column(\n",
-    "    data=np.max([xid_pacs['FErr_PACS_160_u'] - xid_pacs['F_PACS_160'],\n",
-    "                 xid_pacs['F_PACS_160'] - xid_pacs['FErr_PACS_160_l']],\n",
-    "                axis=0),\n",
-    "    name=\"ferr_pacs_red\"\n",
-    "))\n",
-    "xid_pacs['F_PACS_160'].name = \"f_pacs_red\"\n",
-    "xid_pacs['flag_PACS_160'].name = \"flag_pacs_red\"\n",
+    "# xid_pacs.add_column(Column(\n",
+    "#     data=np.max([xid_pacs['FErr_PACS_160_u'] - xid_pacs['F_PACS_160'],\n",
+    "#                  xid_pacs['F_PACS_160'] - xid_pacs['FErr_PACS_160_l']],\n",
+    "#                 axis=0),\n",
+    "#     name=\"ferr_pacs_red\"\n",
+    "# ))\n",
+    "# xid_pacs['F_PACS_160'].name = \"f_pacs_red\"\n",
+    "# xid_pacs['flag_PACS_160'].name = \"flag_pacs_red\"\n",
     "\n",
-    "xid_pacs = xid_pacs['help_id', 'f_pacs_green', 'ferr_pacs_green',\n",
-    "                    'flag_pacs_green', 'f_pacs_red', 'ferr_pacs_red',\n",
-    "                    'flag_pacs_red']\n"
+    "# xid_pacs = xid_pacs['help_id', 'f_pacs_green', 'ferr_pacs_green',\n",
+    "#                     'flag_pacs_green', 'f_pacs_red', 'ferr_pacs_red',\n",
+    "#                     'flag_pacs_red']\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# XID+ SPIRE\n",
+    "# # XID+ SPIRE\n",
     "\n",
-    "xid_spire = Table.read(\"../../dmu26/dmu26_XID+SPIRE_CDFS-SWIRE/data/\"\n",
-    "                         \"dmu26_XID+SPIRE_CDFS-SWIRE_cat_20170919.fits\")\n",
-    "xid_spire.meta = None\n",
+    "# xid_spire = Table.read(\"../../dmu26/dmu26_XID+SPIRE_CDFS-SWIRE/data/\"\n",
+    "#                          \"dmu26_XID+SPIRE_CDFS-SWIRE_cat_20170919.fits\")\n",
+    "# xid_spire.meta = None\n",
     "\n",
-    "xid_spire['HELP_ID'].name = \"help_id\"\n",
+    "# xid_spire['HELP_ID'].name = \"help_id\"\n",
     "\n",
-    "# Convert from mJy to μJy\n",
-    "for col in [\"F_SPIRE_250\", \"FErr_SPIRE_250_u\", \"FErr_SPIRE_250_l\",\n",
-    "            \"F_SPIRE_350\", \"FErr_SPIRE_350_u\", \"FErr_SPIRE_350_l\",\n",
-    "            \"F_SPIRE_500\", \"FErr_SPIRE_500_u\", \"FErr_SPIRE_500_l\"]:\n",
-    "    xid_spire[col] *= 1000\n",
+    "# # Convert from mJy to μJy\n",
+    "# for col in [\"F_SPIRE_250\", \"FErr_SPIRE_250_u\", \"FErr_SPIRE_250_l\",\n",
+    "#             \"F_SPIRE_350\", \"FErr_SPIRE_350_u\", \"FErr_SPIRE_350_l\",\n",
+    "#             \"F_SPIRE_500\", \"FErr_SPIRE_500_u\", \"FErr_SPIRE_500_l\"]:\n",
+    "#     xid_spire[col] *= 1000\n",
     "\n",
-    "xid_spire.add_column(Column(\n",
-    "    data=np.max([xid_spire['FErr_SPIRE_250_u'] - xid_spire['F_SPIRE_250'],\n",
-    "                 xid_spire['F_SPIRE_250'] - xid_spire['FErr_SPIRE_250_l']],\n",
-    "                axis=0),\n",
-    "    name=\"ferr_spire_250\"\n",
-    "))\n",
-    "xid_spire['F_SPIRE_250'].name = \"f_spire_250\"\n",
-    "xid_spire.add_column(Column(\n",
-    "    data=np.max([xid_spire['FErr_SPIRE_350_u'] - xid_spire['F_SPIRE_350'],\n",
-    "                 xid_spire['F_SPIRE_350'] - xid_spire['FErr_SPIRE_350_l']],\n",
-    "                axis=0),\n",
-    "    name=\"ferr_spire_350\"\n",
-    "))\n",
-    "xid_spire['F_SPIRE_350'].name = \"f_spire_350\"\n",
-    "xid_spire.add_column(Column(\n",
-    "    data=np.max([xid_spire['FErr_SPIRE_500_u'] - xid_spire['F_SPIRE_500'],\n",
-    "                 xid_spire['F_SPIRE_500'] - xid_spire['FErr_SPIRE_500_l']],\n",
-    "                axis=0),\n",
-    "    name=\"ferr_spire_500\"\n",
-    "))\n",
-    "xid_spire['F_SPIRE_500'].name = \"f_spire_500\"\n",
+    "# xid_spire.add_column(Column(\n",
+    "#     data=np.max([xid_spire['FErr_SPIRE_250_u'] - xid_spire['F_SPIRE_250'],\n",
+    "#                  xid_spire['F_SPIRE_250'] - xid_spire['FErr_SPIRE_250_l']],\n",
+    "#                 axis=0),\n",
+    "#     name=\"ferr_spire_250\"\n",
+    "# ))\n",
+    "# xid_spire['F_SPIRE_250'].name = \"f_spire_250\"\n",
+    "# xid_spire.add_column(Column(\n",
+    "#     data=np.max([xid_spire['FErr_SPIRE_350_u'] - xid_spire['F_SPIRE_350'],\n",
+    "#                  xid_spire['F_SPIRE_350'] - xid_spire['FErr_SPIRE_350_l']],\n",
+    "#                 axis=0),\n",
+    "#     name=\"ferr_spire_350\"\n",
+    "# ))\n",
+    "# xid_spire['F_SPIRE_350'].name = \"f_spire_350\"\n",
+    "# xid_spire.add_column(Column(\n",
+    "#     data=np.max([xid_spire['FErr_SPIRE_500_u'] - xid_spire['F_SPIRE_500'],\n",
+    "#                  xid_spire['F_SPIRE_500'] - xid_spire['FErr_SPIRE_500_l']],\n",
+    "#                 axis=0),\n",
+    "#     name=\"ferr_spire_500\"\n",
+    "# ))\n",
+    "# xid_spire['F_SPIRE_500'].name = \"f_spire_500\"\n",
     "\n",
-    "xid_spire = xid_spire['help_id',\n",
-    "                      'f_spire_250', 'ferr_spire_250', 'flag_spire_250',\n",
-    "                      'f_spire_350', 'ferr_spire_350', 'flag_spire_350',\n",
-    "                      'f_spire_500', 'ferr_spire_500', 'flag_spire_500']"
+    "# xid_spire = xid_spire['help_id',\n",
+    "#                       'f_spire_250', 'ferr_spire_250', 'flag_spire_250',\n",
+    "#                       'f_spire_350', 'ferr_spire_350', 'flag_spire_350',\n",
+    "#                       'f_spire_500', 'ferr_spire_500', 'flag_spire_500']"
    ]
   },
   {
@@ -228,15 +234,15 @@
    },
    "outputs": [],
    "source": [
-    "merged_table = join(ml, xid_mips24, join_type='left')\n",
+    "# merged_table = join(ml, xid_mips24, join_type='left')\n",
     "\n",
-    "# Fill values\n",
-    "for col in xid_mips24.colnames:\n",
-    "    if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
-    "        merged_table[col].fill_value = np.nan\n",
-    "    elif col.startswith(\"flag_\"):\n",
-    "        merged_table[col].fill_value = False\n",
-    "merged_table = merged_table.filled()"
+    "# # Fill values\n",
+    "# for col in xid_mips24.colnames:\n",
+    "#     if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
+    "#         merged_table[col].fill_value = np.nan\n",
+    "#     elif col.startswith(\"flag_\"):\n",
+    "#         merged_table[col].fill_value = False\n",
+    "# merged_table = merged_table.filled()"
    ]
   },
   {
@@ -247,15 +253,15 @@
    },
    "outputs": [],
    "source": [
-    "merged_table = join(merged_table, xid_pacs, join_type='left')\n",
+    "# merged_table = join(merged_table, xid_pacs, join_type='left')\n",
     "        \n",
-    "# Fill values\n",
-    "for col in xid_pacs.colnames:\n",
-    "    if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
-    "        merged_table[col].fill_value = np.nan\n",
-    "    elif col.startswith(\"flag_\"):\n",
-    "        merged_table[col].fill_value = False\n",
-    "merged_table = merged_table.filled()"
+    "# # Fill values\n",
+    "# for col in xid_pacs.colnames:\n",
+    "#     if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
+    "#         merged_table[col].fill_value = np.nan\n",
+    "#     elif col.startswith(\"flag_\"):\n",
+    "#         merged_table[col].fill_value = False\n",
+    "# merged_table = merged_table.filled()"
    ]
   },
   {
@@ -266,15 +272,15 @@
    },
    "outputs": [],
    "source": [
-    "merged_table = join(merged_table, xid_spire, join_type='left')\n",
+    "# merged_table = join(merged_table, xid_spire, join_type='left')\n",
     "        \n",
-    "# Fill values\n",
-    "for col in xid_spire.colnames:\n",
-    "    if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
-    "        merged_table[col].fill_value = np.nan\n",
-    "    elif col.startswith(\"flag_\"):\n",
-    "        merged_table[col].fill_value = False\n",
-    "merged_table = merged_table.filled()"
+    "# # Fill values\n",
+    "# for col in xid_spire.colnames:\n",
+    "#     if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
+    "#         merged_table[col].fill_value = np.nan\n",
+    "#     elif col.startswith(\"flag_\"):\n",
+    "#         merged_table[col].fill_value = False\n",
+    "# merged_table = merged_table.filled()"
    ]
   },
   {
@@ -332,7 +338,7 @@
     "    # assert set(columns) == set(merged_table.colnames)\n",
     "    \n",
     "    \n",
-    "    merged_table.write(\"data/CDFS-SWIRE_20180129_cigale.fits\")"
+    "    merged_table.write(\"data/EGS_{}_cigale.fits\".format(SUFFIX))"
    ]
   },
   {
