--- a/dmu32/dmu32_Herschel-Stripe-82/Herschel-Stripe-82_catalogue_merging.ipynb
+++ b/dmu32/dmu32_Herschel-Stripe-82/Herschel-Stripe-82_catalogue_merging.ipynb
@@ -4,24 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CDFS-SWIRE - Merging HELP data products\n",
+    "# Herschel-Stripe-82 - Merging HELP data products\n",
     "\n",
-    "This notebook merges the various HELP data products on CDFS-SWIRE.\n",
+    "This notebook merges the various HELP data products on Herschel-Stripe-82. Due to the large size of HS82 we must run the code over individual tiles as produced at the masterlist stage.\n",
     "\n",
     "It is first used to create a catalogue that will be used for SED fitting by CIGALE by merging the optical master list, the photo-z and the XID+ far infrared fluxes.  Then, this notebook is used to incorporate the CIGALE physical parameter estimations and generate the final HELP data product on the field."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Set this to true to produce only the catalogue for CIGALE and to false \n",
-    "# to continue and merge the CIGALE results too.\n",
-    "FIRST_RUN_FOR_CIGALE = True"
    ]
   },
   {
@@ -36,12 +23,42 @@
     "\n",
     "from astropy.table import Column, MaskedColumn, Table, join, vstack\n",
     "\n",
+    "import glob\n",
+    "\n",
     "from herschelhelp.filters import get_filter_meta_table\n",
     "\n",
     "filter_mean_lambda = {\n",
     "    item['filter_id']: item['mean_wavelength'] for item in\n",
     "    get_filter_meta_table()\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Set this to true to produce only the catalogue for CIGALE and to false \n",
+    "# to continue and merge the CIGALE results too.\n",
+    "FIRST_RUN_FOR_CIGALE = True\n",
+    "\n",
+    "SUFFIX = ''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# On Herschel-Stripe-82 we have a list of tiles due to the large size of the field. \n",
+    "# Therefore, we here process each in turn\n",
+    "file_list = glob.glob('../../dmu1/dmu1_ml_Herschel-Stripe-82/data/tiles/sub_catalogue_herschel-stripe-82_{}_*.fits'.format(SUFFIX))\n"
    ]
   },
   {
@@ -59,11 +76,11 @@
    },
    "outputs": [],
    "source": [
-    "# Master list\n",
+    "# # Master list\n",
     "\n",
-    "ml = Table.read(\n",
-    "    \"../../dmu1/dmu1_ml_CDFS-SWIRE/data/master_catalogue_cdfs-swire_20180129.fits\")\n",
-    "ml.meta = None"
+    "# ml = Table.read(\n",
+    "#     \"../../dmu1/dmu1_ml_CDFS-SWIRE/data/master_catalogue_cdfs-swire_20180129.fits\")\n",
+    "# ml.meta = None"
    ]
   },
   {
@@ -74,109 +91,113 @@
    },
    "outputs": [],
    "source": [
-    "# XID+ MIPS24\n",
+    "# # XID+ MIPS24\n",
     "\n",
-    "xid_mips24 = Table.read(\"../../dmu26/dmu26_XID+MIPS_CDFS-SWIRE/data/\"\n",
-    "                          \"dmu26_XID+MIPS_CDFS-SWIRE_cat_20170901.fits\")\n",
-    "xid_mips24.meta = None\n",
+    "# xid_mips24 = Table.read(\"../../dmu26/dmu26_XID+MIPS_CDFS-SWIRE/data/\"\n",
+    "#                           \"dmu26_XID+MIPS_CDFS-SWIRE_cat_20170901.fits\")\n",
+    "# xid_mips24.meta = None\n",
     "\n",
-    "# Adding the error column\n",
-    "xid_mips24.add_column(Column(\n",
-    "    data=np.max([xid_mips24['FErr_MIPS_24_u'] - xid_mips24['F_MIPS_24'],\n",
-    "                 xid_mips24['F_MIPS_24'] - xid_mips24['FErr_MIPS_24_l']],\n",
-    "                axis=0),\n",
-    "    name=\"ferr_mips_24\"\n",
-    "))\n",
-    "xid_mips24['F_MIPS_24'].name = \"f_mips_24\"\n",
-    "xid_mips24 = xid_mips24['help_id', 'f_mips_24', 'ferr_mips_24', 'flag_mips_24']"
+    "# # Adding the error column\n",
+    "# xid_mips24.add_column(Column(\n",
+    "#     data=np.max([xid_mips24['FErr_MIPS_24_u'] - xid_mips24['F_MIPS_24'],\n",
+    "#                  xid_mips24['F_MIPS_24'] - xid_mips24['FErr_MIPS_24_l']],\n",
+    "#                 axis=0),\n",
+    "#     name=\"ferr_mips_24\"\n",
+    "# ))\n",
+    "# xid_mips24['F_MIPS_24'].name = \"f_mips_24\"\n",
+    "# xid_mips24 = xid_mips24['help_id', 'f_mips_24', 'ferr_mips_24', 'flag_mips_24']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# XID+ PACS\n",
+    "# # XID+ PACS\n",
     "\n",
-    "xid_pacs = Table.read(\"../../dmu26/dmu26_XID+PACS_CDFS-SWIRE/data/\"\n",
-    "                        \"dmu26_XID+PACS_CDFS-SWIRE_cat_20171019.fits\")\n",
-    "xid_pacs.meta = None\n",
+    "# xid_pacs = Table.read(\"../../dmu26/dmu26_XID+PACS_CDFS-SWIRE/data/\"\n",
+    "#                         \"dmu26_XID+PACS_CDFS-SWIRE_cat_20171019.fits\")\n",
+    "# xid_pacs.meta = None\n",
     "\n",
-    "# Convert from mJy to μJy\n",
-    "for col in [\"F_PACS_100\", \"FErr_PACS_100_u\", \"FErr_PACS_100_l\",\n",
-    "            \"F_PACS_160\", \"FErr_PACS_160_u\", \"FErr_PACS_160_l\"]:\n",
-    "    xid_pacs[col] *= 1000\n",
+    "# # Convert from mJy to μJy\n",
+    "# for col in [\"F_PACS_100\", \"FErr_PACS_100_u\", \"FErr_PACS_100_l\",\n",
+    "#             \"F_PACS_160\", \"FErr_PACS_160_u\", \"FErr_PACS_160_l\"]:\n",
+    "#     xid_pacs[col] *= 1000\n",
     "\n",
-    "xid_pacs.add_column(Column(\n",
-    "    data=np.max([xid_pacs['FErr_PACS_100_u'] - xid_pacs['F_PACS_100'],\n",
-    "                 xid_pacs['F_PACS_100'] - xid_pacs['FErr_PACS_100_l']],\n",
-    "                axis=0),\n",
-    "    name=\"ferr_pacs_green\"\n",
-    "))\n",
-    "xid_pacs['F_PACS_100'].name = \"f_pacs_green\"\n",
-    "xid_pacs['flag_PACS_100'].name = \"flag_pacs_green\"\n",
+    "# xid_pacs.add_column(Column(\n",
+    "#     data=np.max([xid_pacs['FErr_PACS_100_u'] - xid_pacs['F_PACS_100'],\n",
+    "#                  xid_pacs['F_PACS_100'] - xid_pacs['FErr_PACS_100_l']],\n",
+    "#                 axis=0),\n",
+    "#     name=\"ferr_pacs_green\"\n",
+    "# ))\n",
+    "# xid_pacs['F_PACS_100'].name = \"f_pacs_green\"\n",
+    "# xid_pacs['flag_PACS_100'].name = \"flag_pacs_green\"\n",
     "\n",
-    "xid_pacs.add_column(Column(\n",
-    "    data=np.max([xid_pacs['FErr_PACS_160_u'] - xid_pacs['F_PACS_160'],\n",
-    "                 xid_pacs['F_PACS_160'] - xid_pacs['FErr_PACS_160_l']],\n",
-    "                axis=0),\n",
-    "    name=\"ferr_pacs_red\"\n",
-    "))\n",
-    "xid_pacs['F_PACS_160'].name = \"f_pacs_red\"\n",
-    "xid_pacs['flag_PACS_160'].name = \"flag_pacs_red\"\n",
+    "# xid_pacs.add_column(Column(\n",
+    "#     data=np.max([xid_pacs['FErr_PACS_160_u'] - xid_pacs['F_PACS_160'],\n",
+    "#                  xid_pacs['F_PACS_160'] - xid_pacs['FErr_PACS_160_l']],\n",
+    "#                 axis=0),\n",
+    "#     name=\"ferr_pacs_red\"\n",
+    "# ))\n",
+    "# xid_pacs['F_PACS_160'].name = \"f_pacs_red\"\n",
+    "# xid_pacs['flag_PACS_160'].name = \"flag_pacs_red\"\n",
     "\n",
-    "xid_pacs = xid_pacs['help_id', 'f_pacs_green', 'ferr_pacs_green',\n",
-    "                    'flag_pacs_green', 'f_pacs_red', 'ferr_pacs_red',\n",
-    "                    'flag_pacs_red']\n"
+    "# xid_pacs = xid_pacs['help_id', 'f_pacs_green', 'ferr_pacs_green',\n",
+    "#                     'flag_pacs_green', 'f_pacs_red', 'ferr_pacs_red',\n",
+    "#                     'flag_pacs_red']\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# XID+ SPIRE\n",
+    "# # XID+ SPIRE\n",
     "\n",
-    "xid_spire = Table.read(\"../../dmu26/dmu26_XID+SPIRE_CDFS-SWIRE/data/\"\n",
-    "                         \"dmu26_XID+SPIRE_CDFS-SWIRE_cat_20170919.fits\")\n",
-    "xid_spire.meta = None\n",
+    "# xid_spire = Table.read(\"../../dmu26/dmu26_XID+SPIRE_CDFS-SWIRE/data/\"\n",
+    "#                          \"dmu26_XID+SPIRE_CDFS-SWIRE_cat_20170919.fits\")\n",
+    "# xid_spire.meta = None\n",
     "\n",
-    "xid_spire['HELP_ID'].name = \"help_id\"\n",
+    "# xid_spire['HELP_ID'].name = \"help_id\"\n",
     "\n",
-    "# Convert from mJy to μJy\n",
-    "for col in [\"F_SPIRE_250\", \"FErr_SPIRE_250_u\", \"FErr_SPIRE_250_l\",\n",
-    "            \"F_SPIRE_350\", \"FErr_SPIRE_350_u\", \"FErr_SPIRE_350_l\",\n",
-    "            \"F_SPIRE_500\", \"FErr_SPIRE_500_u\", \"FErr_SPIRE_500_l\"]:\n",
-    "    xid_spire[col] *= 1000\n",
+    "# # Convert from mJy to μJy\n",
+    "# for col in [\"F_SPIRE_250\", \"FErr_SPIRE_250_u\", \"FErr_SPIRE_250_l\",\n",
+    "#             \"F_SPIRE_350\", \"FErr_SPIRE_350_u\", \"FErr_SPIRE_350_l\",\n",
+    "#             \"F_SPIRE_500\", \"FErr_SPIRE_500_u\", \"FErr_SPIRE_500_l\"]:\n",
+    "#     xid_spire[col] *= 1000\n",
     "\n",
-    "xid_spire.add_column(Column(\n",
-    "    data=np.max([xid_spire['FErr_SPIRE_250_u'] - xid_spire['F_SPIRE_250'],\n",
-    "                 xid_spire['F_SPIRE_250'] - xid_spire['FErr_SPIRE_250_l']],\n",
-    "                axis=0),\n",
-    "    name=\"ferr_spire_250\"\n",
-    "))\n",
-    "xid_spire['F_SPIRE_250'].name = \"f_spire_250\"\n",
-    "xid_spire.add_column(Column(\n",
-    "    data=np.max([xid_spire['FErr_SPIRE_350_u'] - xid_spire['F_SPIRE_350'],\n",
-    "                 xid_spire['F_SPIRE_350'] - xid_spire['FErr_SPIRE_350_l']],\n",
-    "                axis=0),\n",
-    "    name=\"ferr_spire_350\"\n",
-    "))\n",
-    "xid_spire['F_SPIRE_350'].name = \"f_spire_350\"\n",
-    "xid_spire.add_column(Column(\n",
-    "    data=np.max([xid_spire['FErr_SPIRE_500_u'] - xid_spire['F_SPIRE_500'],\n",
-    "                 xid_spire['F_SPIRE_500'] - xid_spire['FErr_SPIRE_500_l']],\n",
-    "                axis=0),\n",
-    "    name=\"ferr_spire_500\"\n",
-    "))\n",
-    "xid_spire['F_SPIRE_500'].name = \"f_spire_500\"\n",
+    "# xid_spire.add_column(Column(\n",
+    "#     data=np.max([xid_spire['FErr_SPIRE_250_u'] - xid_spire['F_SPIRE_250'],\n",
+    "#                  xid_spire['F_SPIRE_250'] - xid_spire['FErr_SPIRE_250_l']],\n",
+    "#                 axis=0),\n",
+    "#     name=\"ferr_spire_250\"\n",
+    "# ))\n",
+    "# xid_spire['F_SPIRE_250'].name = \"f_spire_250\"\n",
+    "# xid_spire.add_column(Column(\n",
+    "#     data=np.max([xid_spire['FErr_SPIRE_350_u'] - xid_spire['F_SPIRE_350'],\n",
+    "#                  xid_spire['F_SPIRE_350'] - xid_spire['FErr_SPIRE_350_l']],\n",
+    "#                 axis=0),\n",
+    "#     name=\"ferr_spire_350\"\n",
+    "# ))\n",
+    "# xid_spire['F_SPIRE_350'].name = \"f_spire_350\"\n",
+    "# xid_spire.add_column(Column(\n",
+    "#     data=np.max([xid_spire['FErr_SPIRE_500_u'] - xid_spire['F_SPIRE_500'],\n",
+    "#                  xid_spire['F_SPIRE_500'] - xid_spire['FErr_SPIRE_500_l']],\n",
+    "#                 axis=0),\n",
+    "#     name=\"ferr_spire_500\"\n",
+    "# ))\n",
+    "# xid_spire['F_SPIRE_500'].name = \"f_spire_500\"\n",
     "\n",
-    "xid_spire = xid_spire['help_id',\n",
-    "                      'f_spire_250', 'ferr_spire_250', 'flag_spire_250',\n",
-    "                      'f_spire_350', 'ferr_spire_350', 'flag_spire_350',\n",
-    "                      'f_spire_500', 'ferr_spire_500', 'flag_spire_500']"
+    "# xid_spire = xid_spire['help_id',\n",
+    "#                       'f_spire_250', 'ferr_spire_250', 'flag_spire_250',\n",
+    "#                       'f_spire_350', 'ferr_spire_350', 'flag_spire_350',\n",
+    "#                       'f_spire_500', 'ferr_spire_500', 'flag_spire_500']"
    ]
   },
   {
@@ -206,11 +227,11 @@
    },
    "outputs": [],
    "source": [
-    "# Temp spec-z\n",
+    "# # Temp spec-z\n",
     "\n",
-    "ml['zspec'].name = 'redshift'\n",
+    "# ml['zspec'].name = 'redshift'\n",
     "\n",
-    "ml['redshift'][ml['redshift'] < 0] = np.nan  # -99 used for missing values"
+    "# ml['redshift'][ml['redshift'] < 0] = np.nan  # -99 used for missing values"
    ]
   },
   {
@@ -228,15 +249,15 @@
    },
    "outputs": [],
    "source": [
-    "merged_table = join(ml, xid_mips24, join_type='left')\n",
+    "# merged_table = join(ml, xid_mips24, join_type='left')\n",
     "\n",
-    "# Fill values\n",
-    "for col in xid_mips24.colnames:\n",
-    "    if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
-    "        merged_table[col].fill_value = np.nan\n",
-    "    elif col.startswith(\"flag_\"):\n",
-    "        merged_table[col].fill_value = False\n",
-    "merged_table = merged_table.filled()"
+    "# # Fill values\n",
+    "# for col in xid_mips24.colnames:\n",
+    "#     if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
+    "#         merged_table[col].fill_value = np.nan\n",
+    "#     elif col.startswith(\"flag_\"):\n",
+    "#         merged_table[col].fill_value = False\n",
+    "# merged_table = merged_table.filled()"
    ]
   },
   {
@@ -247,15 +268,15 @@
    },
    "outputs": [],
    "source": [
-    "merged_table = join(merged_table, xid_pacs, join_type='left')\n",
+    "# merged_table = join(merged_table, xid_pacs, join_type='left')\n",
     "        \n",
-    "# Fill values\n",
-    "for col in xid_pacs.colnames:\n",
-    "    if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
-    "        merged_table[col].fill_value = np.nan\n",
-    "    elif col.startswith(\"flag_\"):\n",
-    "        merged_table[col].fill_value = False\n",
-    "merged_table = merged_table.filled()"
+    "# # Fill values\n",
+    "# for col in xid_pacs.colnames:\n",
+    "#     if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
+    "#         merged_table[col].fill_value = np.nan\n",
+    "#     elif col.startswith(\"flag_\"):\n",
+    "#         merged_table[col].fill_value = False\n",
+    "# merged_table = merged_table.filled()"
    ]
   },
   {
@@ -266,15 +287,15 @@
    },
    "outputs": [],
    "source": [
-    "merged_table = join(merged_table, xid_spire, join_type='left')\n",
+    "# merged_table = join(merged_table, xid_spire, join_type='left')\n",
     "        \n",
-    "# Fill values\n",
-    "for col in xid_spire.colnames:\n",
-    "    if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
-    "        merged_table[col].fill_value = np.nan\n",
-    "    elif col.startswith(\"flag_\"):\n",
-    "        merged_table[col].fill_value = False\n",
-    "merged_table = merged_table.filled()"
+    "# # Fill values\n",
+    "# for col in xid_spire.colnames:\n",
+    "#     if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
+    "#         merged_table[col].fill_value = np.nan\n",
+    "#     elif col.startswith(\"flag_\"):\n",
+    "#         merged_table[col].fill_value = False\n",
+    "# merged_table = merged_table.filled()"
    ]
   },
   {
@@ -309,30 +330,45 @@
    "source": [
     "if FIRST_RUN_FOR_CIGALE:\n",
     "    \n",
-    "    # Sorting the columns\n",
-    "    bands = [col[2:] for col in merged_table.colnames\n",
-    "             if col.startswith('f_') and not col.startswith('f_ap')]\n",
-    "    bands.sort(key=lambda x: filter_mean_lambda[x])\n",
+    "    for tile in file_list:\n",
+    "        \n",
+    "        file_num = tile.split('_')[4].split('.')[0]\n",
+    "        ml = Table.read(tile)\n",
+    "        ml.meta = None\n",
+    "        \n",
+    "        ml['zspec'].name = 'redshift'\n",
+    "\n",
+    "        ml['redshift'][ml['redshift'] < 0] = np.nan  # -99 used for missing values\n",
+    "        \n",
+    "        \n",
+    "        #ADD in XID+ merging here\n",
+    "        \n",
+    "        merged_table = ml\n",
     "    \n",
-    "    columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', 'redshift', \n",
-    "               'zspec']\n",
+    "        # Sorting the columns\n",
+    "        bands = [col[2:] for col in merged_table.colnames\n",
+    "                 if col.startswith('f_') and not col.startswith('f_ap')]\n",
+    "        bands.sort(key=lambda x: filter_mean_lambda[x])\n",
+    "    \n",
+    "        columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', 'redshift', \n",
+    "                   'zspec']\n",
     "    for band in bands:\n",
-    "        for col_tpl in ['f_{}', 'ferr_{}', 'f_ap_{}', 'ferr_ap_{}',\n",
-    "                        'm_{}', 'merr_{}', 'm_ap_{}', 'merr_ap_{}',\n",
-    "                        'flag_{}']:\n",
-    "            colname = col_tpl.format(band)\n",
-    "            if colname in merged_table.colnames:\n",
-    "                columns.append(colname)\n",
-    "    columns += ['stellarity', 'stellarity_origin', 'flag_cleaned',\n",
-    "                'flag_merged', 'flag_gaia', 'flag_optnir_obs',\n",
-    "                'flag_optnir_det', 'zspec_qual', 'zspec_association_flag']\n",
+    "            for col_tpl in ['f_{}', 'ferr_{}', 'f_ap_{}', 'ferr_ap_{}',\n",
+    "                            'm_{}', 'merr_{}', 'm_ap_{}', 'merr_ap_{}',\n",
+    "                            'flag_{}']:\n",
+    "                colname = col_tpl.format(band)\n",
+    "                if colname in merged_table.colnames:\n",
+    "                    columns.append(colname)\n",
+    "        columns += ['stellarity', 'stellarity_origin', 'flag_cleaned',\n",
+    "                    'flag_merged', 'flag_gaia', 'flag_optnir_obs',\n",
+    "                    'flag_optnir_det', 'zspec_qual', 'zspec_association_flag']\n",
     "    \n",
     "\n",
-    "    # Check that we did not forget any column\n",
-    "    # assert set(columns) == set(merged_table.colnames)\n",
+    "        # Check that we did not forget any column\n",
+    "        # assert set(columns) == set(merged_table.colnames)\n",
     "    \n",
     "    \n",
-    "    merged_table.write(\"data/CDFS-SWIRE_20180129_cigale.fits\")"
+    "        merged_table.write(\"data/tiles/Herschel-Stripe-82_{}_cigale_{}.fits\".format(SUFFIX, file_num), overwrite=True)"
    ]
   },
   {
