Added specz on all fields that we have it for
changed username

--- a/dmu28/dmu28_CDFS-SWIRE/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_CDFS-SWIRE/CIGALE_catalogue_preparation.ipynb
@@ -33,7 +33,7 @@
    },
    "outputs": [],
    "source": [
-    "master_catalogue = Table.read(\"../../dmu32/dmu32_CDFS-SWIRE/data/CDFS-SWIRE_20180129_cigale.fits\")"
+    "master_catalogue = Table.read(\"../../dmu32/dmu32_CDFS-SWIRE/data/CDFS-SWIRE_20180130_cigale.fits\")"
    ]
   },
   {
@@ -164,12 +164,12 @@
    },
    "outputs": [],
    "source": [
-    "u_bands = [          \"OmegaCAM u\"]\n",
-    "g_bands = [\"GPC1 g\", \"OmegaCAM g\"]\n",
-    "r_bands = [\"GPC1 r\", \"OmegaCAM r\"]\n",
-    "i_bands = [\"GPC1 i\", \"OmegaCAM i\"]\n",
-    "z_bands = [\"VISTA z\", \"OmegaCAM z\", \"GPC1 z\",]\n",
-    "y_bands = [\"VISTA y\"  \"GPC1 y\", ]\n",
+    "u_bands = [          \"omegacam_u\"]\n",
+    "g_bands = [\"gpc1_g\", \"omegacam_g\"]\n",
+    "r_bands = [\"gpc1_r\", \"omegacam_r\"]\n",
+    "i_bands = [\"gpc1_i\", \"omegacam_i\"]\n",
+    "z_bands = [\"vista_z\", \"omegacam_z\", \"gpc1_z\",]\n",
+    "y_bands = [\"vista_y\"  \"gpc1_y\", ]\n",
     "\n",
     "def remove_unneeded_fluxes(list_of_bands):\n",
     "    for band_idx, band in enumerate(list_of_bands[:-1]):\n",
@@ -307,7 +307,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue.write(\"data_tmp/CDFS-SWIRE_cigale_best_extcor_zspec_20180129.fits\")"
+    "best_catalogue.write(\"data_tmp/CDFS-SWIRE_cigale_best_extcor_zspec_20180130.fits\", overwrite=True)"
    ]
   }
  ],
