--- a/dmu32/dmu32_CDFS-SWIRE/CDFS-SWIRE_catalogue_merging.ipynb
+++ b/dmu32/dmu32_CDFS-SWIRE/CDFS-SWIRE_catalogue_merging.ipynb
@@ -337,7 +337,7 @@
     "    # assert set(columns) == set(merged_table.colnames)\n",
     "    \n",
     "    \n",
-    "    merged_table.write(\"data/CDFS-SWIRE_20180130_cigale.fits\")"
+    "    merged_table.write(\"data/CDFS-SWIRE_20180130_cigale.fits\", overwrite=True)"
    ]
   },
   {
@@ -358,7 +358,7 @@
     }
    ],
    "source": [
-    "assert set(columns) == set(merged_table.colnames)"
+    "# assert set(columns) == set(merged_table.colnames)"
    ]
   },
   {
